# savings_manager

./: .gitignore  CHANGELOG.md  README.md  alembic.ini  default.ipynb  pyproject.toml
.github/workflows/: python-app.yml
alembic/: 98226b1185e7_app_v2_init_migration.py  env.py  script.py.mako
alembic/versions/: 1b7eef7cdb83_add_moneybox_table.py  2c5bac118e9e_add_moneybox_table.py  3499dac1c6bc_add_mode_4_type_ratio_to_.py  4c2c3a87248c_add_moneybox_and_transaction_tables.py  516f1d26ce8a_add_user_mail_address_and_send_reports_.py  55d336db51de_initial_database_migration_app_v2.py  55d336db51de_test.py  653f527d540f_add_note_column_to_tables.py  6951dd272288_set_index_to_moneybox_name.py  6c38705366e1_rename_initial_overflow_moneybox.py  721c11601cb5_add_v2_related_columns_to_moneyboxes_.py  83ce3642f332_remove_automated_saving_trigger_day_.py  90e853641282_replace_mode_ratio_prioritized_with_.py  948f73438026_add_transaction_table.py  a1e370c69d18_add_moneybox_table.py  a3cb260cb89f_add_app_settings_table.py  a539d5488387_add_overflow_moneybox_automated_savings_.py  a5a2d923bb37_rename_logs_table.py  a68e0b6f86bd_add_users_table.py  a9c3b883ad20_add_ratio_prioritized_overflowmoneybox.py  bb354b32277a_add_moneybox_table.py  d426eb2a54d7_add_description_column_to_moneyboxes_.py  e15f08736162_add_users_table.py  ec5970020dee_add_ck_moneyboxes_name_no_leading_.py  f67dffcb50b4_app_v2_init_migration.py  fac2992c1fdf_add_automated_savings_logs_table.py
docker/: deploy-postgres-database-backup.Dockerfile  deploy-savings-manager.Dockerfile  docker-compose.yml
docs/: Diagram 1.svg.xml  Diagram 2.svg.xml  Diagram.svg.xml  _changelog_template.md  vulture_whitelist.def  vulture_whitelist.py
docs/.obsidian/: appearance.json  hotkeys.json  workspace.json
docs/Architecture/: Autom. Database Backup.md  Database App v1.md  Database App v2.md  Endpoints.md
docs/Feauture Requests/: Ideas.md
docs/Guidelines/: Workflow.md
docs/Guidelines/Code/: Code Style.md  Quality Assurence.md
docs/Requirements/: Requirement Analysis.md
docs/sphinx/: Makefile
docs/sphinx/source/: app_logger.rst  conf.py  data_classes.rst  index.rst  limiter.rst  modules.rst  report_sender.email_sender.rst  report_sender.email_sender.templates.rst  report_sender.rst  routes.responses.rst  routes.rst  src.auth.rst  src.data_classes.rst  src.db.models.rst  src.db.rst  src.report_sender.email_sender.rst  src.report_sender.email_sender.templates.rst  src.report_sender.rst  src.routes.responses.rst  src.routes.rst  src.rst  task_runner.rst
docs/transaction_log/: Final_Example_Transatcion_Log.ods
docs/ui/draft/: App Version 1.md  App Version 2.md
envs/: .env.general  .env.test
scripts/: START_SAVINGS_MANAGER.bat  START_SAVINGS_MANAGER.sh  clean_up_postgres_database_backups.sh  down_test_database.bat  down_test_database.sh  entrypoint.sh  entrypoint_postgres_database_backup.sh  entrypoint_savings_manager.sh  up_database.bat  up_database.sh  up_test_database.bat  up_test_database.sh  update_sphinx_html_documentation.bat  update_sphinx_html_documentation.sh
src/: app_logger.py  config.py  constants.py  custom_types.py  decorators.py  exception_handler.py  fastapi_metadata.py  fastapi_utils.py  limiter.py  main.py  settings.py  singleton.py  task_runner.py  utils.py
src/auth/: exceptions.py  jwt_auth.py
src/data_classes/: moneybox.py  requests.py  responses.py  settings.py
src/db/: core.py  db_manager.py  exceptions.py  models.py
src/db/models/: moneybox.py
src/report_sender/: consants.py  exceptions.py  sender.py
src/report_sender/email_sender/: sender.py
src/report_sender/email_sender/templates/: automated_savings_done.html
src/routes/: app.py  app_settings.py  email_sender.py  exceptions.py  moneybox.py  moneyboxes.py  prioritylist.py  user.py  web_ui.py
src/routes/responses/: app.py  app_settings.py  custom_openapi_schema.py  email_sender.py  moneybox.py  moneyboxes.py  prioritylist.py  user.py
src/savings_distribution/: automated_savings_distribution.py
temp/: .pgpass
tests/: conftest.py  db_test_data_initializer.py  test_app_endpoints.py  test_app_settings_endpoint.py  test_automated_savings_distribution.py  test_calculate_months_for_reaching_savings_targets.py  test_custom_openapi_schema.py  test_db_core.py  test_db_manager.py  test_email_sender_endpoints.py  test_fastapi_utils.py  test_moneybox_endpoints.py  test_moneybox_response_model.py  test_prioritylist_endpoints.py  test_request_models.py  test_response_exception.py  test_response_models.py  test_task_runner.py  test_transaction_log_model.py  test_transaction_log_response_model.py  test_user_endpoints.py  test_utils.py
tests/temp/: .pgpass  dump.sql
tests/utils/: auth.py  db_manager.py  db_test_data_initializer.py
