[tool.poetry]
name = "Savings Manager"
version = "2.39.0"
description = "Savings Manager is an intuitive app for managing your savings using virtual moneyboxes. Allocate budgets, automate savings, and set priorities to reach goals faster. The app adjusts automatically when you withdraw, ensuring your plan stays on track. Easily transfer funds between moneyboxes or make manual deposits, giving you full control over your savings journey."
authors = ["'PythBuster' <'pythbuster@gmail.com'>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.13"
alembic = "*"
sqlalchemy = {extras = ["asyncio"], version = "*"}
pydantic = {extras = ["email"], version = "*"}
pydantic-settings = "*"
requests = "*"
postgres = "*"
asyncpg = "*"
dictalchemy3 = "*"
fastapi = {extras = ["standard"], version = "*"}
uvicorn = {extras = ["standard"], version = "*"}
jinja2 = "*"
aiosmtplib = "*"
tabulate = "*"
slowapi = "*"
pydantic-extra-types = "*"
semver = "*"
async-fastapi-jwt-auth = "*"
types-tabulate = "^0.9.0.20241207"
bcrypt = "^4.3.0"
starlette = "0.45.3"

[tool.poetry.group.dev.dependencies]
mypy = "*"
black = {extras = ["jupyter"], version = "*"}
isort = "*"
flake8-pyproject = "*"
pylint = "*"
pytest = "*"
pytest-dependency = "*"
sphinx = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pylint-per-file-ignores = "*"
sphinx-rtd-theme = "*"
httpx = "*"
sqlalchemy-stubs = "*"
pytest-order = "*"
types-tabulate = "^0.9.0.20241207"


[tool.black]
line-length = 100
exclude = '''
/(
  | __pycache__
  | .mypy_cache
  | alembic
  | docs
  | envs
)/
'''


[tool.isort]
profile = "black"


[tool.flake8]
max-line-length = 100
exclude = '''
/(
  | __pycache__
  | .mypy_cache
  | alembic
  | docs
  | envs
  | tests/utils/db_test_data_initializer.py
)/
'''


[tool.mypy]
warn_redundant_casts = true
no_site_packages = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
ignore_missing_imports = true
warn_no_return = true
warn_unreachable = true
strict_equality = true


[tool.pylint.MASTER]
# Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
# number of processors available to use.
jobs=0
max-line-length=100
load-plugins=[
    "pylint_per_file_ignores",
]


# see: https://github.com/christopherpickering/pylint-per-file-ignores
[tool.pylint-per-file-ignores]
"tests/test_calculate_months_for_reaching_savings_targets.py"="missing-function-docstring"
"tests/test_user_endpoints.py"="missing-function-docstring"
"tests/test_fastapi_utils.py"="missing-function-docstring"
"test_app_endpoints.py"="missing-function-docstring"
"test_email_sender_endpoints.py"="missing-function-docstring"
"test_task_runner.py"="missing-function-docstring"
"test_db_core.py"="missing-function-docstring"
"test_db_manager.py"="missing-function-docstring"
"test_moneybox_endpoints.py"="missing-function-docstring, too-many-locals, too-many-lines"
"test_prioritylist_endpoints.py"="missing-function-docstring"
"test_utils.py"="missing-function-docstring"
"test_custom_openapi_schema.py"="missing-function-docstring"
"/routes/"="missing-function-docstring"
"requests.py"="duplicate-code"
"responses.py"="duplicate-code"
"/routes/responses/__init__.py"="duplicate-code"
"src/db/__init__.py"="duplicate-code"
"db_test_data_initializer.py"="invalid-name, line-too-long"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--maxfail=1 --cov=src --cov-report html"
testpaths = [
    "tests",
]


[tool.coverage.run]
omit = [
    # omit this single files
    "src/main.py",
    ]

[tool.vulture]
ignore_decorators = ["@model_validator", "@pytest.fixture"]
paths = ["tests", "src", "docs/vulture_whitelist.def"]
sort_by_size = true
make_whitelist = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
